Implemented persistence of the reputation graph using Bukkit's built-in Ebeans systems by Avaje. Tested and seems to be working.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: ReputationWeb
 main: com.gradysimon.reputationweb.ReputationWeb
 version: 0.1
 author: Grady Simon (genre)
+database: true
 commands:
   rep:
     alias: [reputation]
