Added some bounds checking on the command handler so it doesn't start throwing exceptions when passed an incorrect number of arguments. Added logging messages throughout.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ReputationWeb
 main: com.gradysimon.reputationweb.ReputationWeb
 version: 0.1
-author: Grady Simon (genre)
+author: Grady Simon (Genre)
 database: true
 commands:
   rep:
